Tue Jun 14 14:09:54 MDT  Dan Kuester <dkuester@colorado.edu>
	* src/fe-gnome/xtext.h:
	* src/fe-gnome/xtext.c:
	  - Add another string for keeping track of the last user entered.
	* src/fe-gnome/conversation-panel.c:
	  - Don't print consecutive redundant nickstamps

Wed Jun 14 02:04:20 MDT 2006 Jeremy Nickurak <atrus@rifetech.com>

	* src/fe-gnome/conversation-panel.c:
	  - Update system color scheme when gtk theme changes
	* src/fe-gnome/palette.c:
	* src/fe-gnome/palette.h:
	* src/fe-gnome/preferences/page-colors.c:
	  - Implement system-theme color scheme. (#172168)
	* src/fe-gnome/apps_xchat.schemas.in:
	  - Make system-theme colors the default

Tue Jun 13 22:26:54 MDT  David Trowbridge <trowbrds@gmail.com>

	* data/topic-change.glade:
	  - Fix topic change dialog to not resize the window as you type
	    words. (#343567)

Tue Jun 12 16:52:40 MDT 2006  Steve Frécinaux <steve@istique.net>

	* src/fe-gnome/util.c:
	* src/fe-gnome/util.h:
	  - New GtkMenuPositionFunc functions to position context menu when
	    using keyboard.
	* src/fe-gnome/navigation-tree.c:
	  - foo_context() functions now return the menu instead of showing it
	  - handle the popup-menu event (issued when using keyboard) and
	    position the context menu accordingly.

Mon May 12 17:12:08 CEST 2006  Steve Frécinaux <steve@istique.net>

	* src/fe-gnome/text-entry.c:
	  - Fix widget cycling by not eating Ctrl+Tab

Wed May 24 20:55:18 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/userlist-gui.c:
	* src/fe-gnome/userlist.c:
	  - Fix plural l10n (#342841).

Wed May 24 20:42:41 MDT 2006  David Trowbridge <trowbrds@gmail.com>

	* src/fe-gnome/conversation-panel.c:
	* data/xchat-gnome-ui.xml:
	  - Add "send file" and "ignore" items to the default context menu for
	    query windows (#333455).

Tue May 23 21:59:01 CEST 2006  Guillaume Desmottes <cass@skynet.be>

	* src/fe-gnome/xtext.c:
	* src/fe-gnome/xtext.h:
	  - Add two new signals "word_enter" and "word_leave".